# thai-fda-floorplan-ai

./: AGENTS.md  README.md  pyproject.toml
configs/: rules_gmp_thai_fda.yaml
data/sample_synthetic/: README.md  annotation_simple_factory.json
docs/: ANNOTATION_GUIDE.md  DATA_GOVERNANCE.md  MODEL_CARD.md  PHASE_3_COMPUTER_VISION.md  PHASE_4_REVISION_RISK_MODEL.md  PHASE_5_WORKFLOW_INTEGRATION.md  PROJECT_PROPOSAL.md  RISK_REGISTER.md
outputs/: demo_report.json  synthetic_audit_log.json  synthetic_cv_detected_annotation.json  synthetic_officer_report.json  synthetic_officer_report.md  synthetic_revision_risk_metrics.json  synthetic_revision_risk_model.pkl  synthetic_revision_risk_prediction.json  synthetic_revision_training.csv
scripts/: generate_synthetic_floorplan_image.py  generate_synthetic_training_data.py  predict_revision_risk.py  run_cv_demo.py  run_screening.py  run_workflow_demo.py  train_revision_risk_model.py
src/floorplan_ai/: __init__.py
src/floorplan_ai/annotation/: __init__.py  schema.py
src/floorplan_ai/app/: __init__.py  streamlit_app.py
src/floorplan_ai/cv/: __init__.py  annotation_converter.py  detector.py  preprocess.py
src/floorplan_ai/evaluation/: __init__.py  metrics.py
src/floorplan_ai/features/: __init__.py  spatial_features.py
tests/: test_annotation_schema.py  test_cv_detector.py  test_cv_preprocess.py  test_evaluation_metrics.py  test_heatmap_generator.py  test_model_dataset.py  test_report_generator.py  test_revision_risk_model.py  test_rule_engine.py  test_spatial_features.py  test_workflow_case.py
(+15 files in other folders)
