[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thai-fda-floorplan-ai"
version = "0.1.0"
description = "Advisory Phase 1 prototype for Thai FDA food manufacturing floor-plan pre-screening."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6,<3",
  "PyYAML>=6.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
app = [
  "streamlit>=1.32",
  "pandas>=2.0",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
